language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_int_hexadecimal_to_decimal.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() { 0x6f }"
---
----- BEFORE ACTION
pub fn main() { 0x6f }
                ↑     


----- AFTER ACTION
pub fn main() { 111 }
