language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_int_hexadecimal_to_decimal_in_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(x) {\n  let assert <<0x6f>> = x\n}"
---
----- BEFORE ACTION
pub fn go(x) {
  let assert <<0x6f>> = x
               ↑         
}


----- AFTER ACTION
pub fn go(x) {
  let assert <<111>> = x
}
